--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,7 @@ font-family: 'Lato', sans-serif;
 font-family: 'Merriweather', serif;
 font-family: 'Lora', serif;
 */
+
+h1{
+font-family: 'Lato', sans-serif;
+}
