--- a/css/fonts.css
+++ b/css/fonts.css
@@ -80,19 +80,28 @@ section:nth-of-type(7) h3 {
   font-family: Oswald, sans-serif;
   color: #fff;
 }
-section:nth-of-type(7) p#review {
+section:nth-of-type(7) p {
+  color: #fff;
+  font-family: Oswald, sans-serif;
+}
+section:nth-of-type(7) span.fade {
+  color: #75a8d0;
+}
+section:nth-of-type(7) p:nth-of-type(1) {
   font-family: Lora, serif;
   font-style: italic;
   color: #fff;
 }
-section:nth-of-type(7) p {
-  font-family: Oswald, sans-serif;
+section:nth-of-type(7) p:nth-of-type(2) {
+  /*font-family: Oswald, sans-serif;*/
   color: #75a8d0;
 }
+
 section:nth-of-type(8) p {
   font-family: Lora, serif;
   font-style: italic;
   text-align: justify;
+  color: #627078;
 }
 form h2 {
   font-family: Oswald, sans-serif;
