--- a/css/fonts.css
+++ b/css/fonts.css
@@ -58,10 +58,42 @@ section:nth-of-type(4) h3 {
   color: #a97d35;
   font-size: 15px;
 }
-section:nth-of-type(4) li {
+section:nth-of-type(4) ul {
   font-family: Oswald, sans-serif;
   color: #e0e0e0;
+  list-style-type: none;
 }
+section:nth-of-type(4) ul li ul:nth-of-type(1) li:nth-of-type(1), section:nth-of-type(4) ul li ul:nth-of-type(2) li:nth-of-type(1) {
+  font-size: 79px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(1) li:nth-of-type(2), section:nth-of-type(4) ul li ul:nth-of-type(2) li:nth-of-type(2) {
+  font-size: 28px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(1) li:nth-of-type(3), section:nth-of-type(4) ul li ul:nth-of-type(2) li:nth-of-type(3) {
+  font-size: 32px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(3) li:nth-of-type(1) {
+  font-size: 31px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(3) li:nth-of-type(2) {
+  font-size: 40px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(3) li:nth-of-type(3) {
+  font-size: 39px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(4) li:nth-of-type(1), section:nth-of-type(4) ul li ul:nth-of-type(5) li:nth-of-type(1) {
+  font-size: 87px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(4) li:nth-of-type(2), section:nth-of-type(4) ul li ul:nth-of-type(5) li:nth-of-type(2) {
+  font-size: 38px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(4) li:nth-of-type(3) {
+  font-size: 40px;
+}
+section:nth-of-type(4) ul li ul:nth-of-type(5) li:nth-of-type(3) {
+  font-size: 32px;
+}
+
 section:nth-of-type(5) h3 {
   font-family: Oswald, sans-serif;
   color: #fff;
