--- a/css/fonts.css
+++ b/css/fonts.css
@@ -10,12 +10,12 @@ header p {
   color: #b8b8b8;
   font-size: 12px;
 }
-section:nth-of-type(1) h2 {
+section:nth-of-type(1) h1 {
   font-family: Oswald, sans-serif;
   color: #fdcd84;
   font-size: 75px;
 }
-section:nth-of-type(1) h4 {
+section:nth-of-type(1) h2 {
   font-family: Merriweather, serif;
   color: #cbb8a0;
   font-size: 13px;
@@ -26,7 +26,7 @@ section:nth-of-type(1) p {
   color: #000;
   font-size: 25px;
 }
-section:nth-of-type(2) h3 {
+section:nth-of-type(2) h1 {
   font-family: Lora, serif;
   font-weight: 700;
   font-style: italic;
@@ -39,7 +39,7 @@ section:nth-of-type(2) p {
   color: #5f5d66;
   font-size: 19px;
 }
-section:nth-of-type(3) h3 {
+section:nth-of-type(3) h1 {
   font-family: Oswald, sans-serif;
   color: #247a5a;
   font-size: 21px;
@@ -49,11 +49,11 @@ section:nth-of-type(3) p {
   color: #464646;
   font-size: 14px;
 }
-section:nth-of-type(4) h3 .font-change {
+section:nth-of-type(4) h1 .font-change {
   font-family: Lato, sans-serif;
   font-size: 12px;
 }
-section:nth-of-type(4) h3 {
+section:nth-of-type(4) h1 {
   font-family: Oswald, sans-serif;
   color: #a97d35;
   font-size: 15px;
@@ -94,12 +94,12 @@ section:nth-of-type(4) ul li ul:nth-of-type(5) li:nth-of-type(3) {
   font-size: 32px;
 }
 
-section:nth-of-type(5) h3 {
+section:nth-of-type(5) h1 {
   font-family: Oswald, sans-serif;
   color: #fff;
   font-size: 49px;
 }
-section:nth-of-type(5) p {
+section:nth-of-type(5) figcaption {
   font-family: Merriweather, serif;
   font-weight: 300;
   color: #fff;
@@ -107,14 +107,19 @@ section:nth-of-type(5) p {
 }
 section:nth-of-type(5) a {
   color: #b8b1ad;
+  text-decoration: none;
   font-size: 18px;
 }
-section:nth-of-type(6) h3 {
+section:nth-of-type(5) a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+section:nth-of-type(6) h1 {
   font-family: Oswald, sans-serif;
   color: #000;
   font-size: 82px;
 }
-section:nth-of-type(6) p.emphasis {
+section:nth-of-type(6) p:nth-of-type(1) {
   font-family: Oswald, sans-serif;
   color: #000;
   font-size: 39px;
@@ -125,7 +130,7 @@ section:nth-of-type(6) p {
   color: #000;
   font-size: 22px;
 }
-section:nth-of-type(7) h3 {
+section:nth-of-type(7) h1 {
   font-family: Oswald, sans-serif;
   color: #fff;
   font-size: 31px;
@@ -182,7 +187,7 @@ section:nth-of-type(8) p {
   color: #627078;
   font-size: 16px;
 }
-form h2 {
+form h1 {
   font-family: Oswald, sans-serif;
   font-size: 28px;
 }
@@ -206,4 +211,5 @@ footer address {
   font-size: 13px;
   text-align: right;
   color: #989898;
+  line-height: 1.5em;
 }
