--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,85 @@
-/*
-font-family: 'Oswald', sans-serif;
-font-family: 'Lato', sans-serif;
-font-family: 'Merriweather', serif;
-font-family: 'Lora', serif;
-*/
-
-h1{
-font-family: 'Lato', sans-serif;
+body {
+  width: 960px;
+  margin: 0 auto;
 }
+header {
+  background-color: rgb(204, 201, 220);
+  width: 583px;
+  height: 700px;
+}
+section:nth-of-type(1) {
+}
+section:nth-of-type(2) {
+  background-color: rgb(214, 212, 226);
+  width: 583px;
+  height: 310px;
+}
+section:nth-of-type(3) {
+  background-color: yellow;
+}
+section:nth-of-type(4) {
+  background-color: brown;
+  border-color: rgb(233, 233, 233);
+}
+section:nth-of-type(5) {
+  width: 960px;
+  /*background-color: red;*/
+}
+
+section:nth-of-type(5) figure {
+  position: relative;
+}
+section:nth-of-type(5) img {
+  /*position: relative;*/
+}
+section:nth-of-type(5) a {
+  display: inline-block;
+  padding-top: 30px;
+}
+section:nth-of-type(5) a img {
+  position: absolute;
+  top: 505px;
+  right: 0px;
+}
+section:nth-of-type(5) h1 {
+  background-color: rgb(82, 71, 67);
+  height: 117px;
+  display: block;
+  text-align: center;
+  line-height: 2.3em;
+}
+section:nth-of-type(5) figcaption {
+  background-color: rgb(113, 98, 91);
+  padding: 70px 25px 30px 25px;
+  line-height: 1.3em;
+  display: block;
+  margin-top: -33px;
+}
+section:nth-of-type(6) {
+  background-color: grey;
+}
+section:nth-of-type(6) h1 {
+  border-bottom: 20px solid #000; 
+}
+section:nth-of-type(6) p:nth-of-type(1) {
+  border-bottom: 3px solid #000; 
+}
+section:nth-of-type(7) {
+  background-color: rgb(60, 131, 187);
+  width: 225px;
+  height: 715px;
+}
+section:nth-of-type(8) {
+  background-color: orange;
+}
+form {
+  border: 1px solid rgb(231, 231, 231);
+  padding: 20px;
+  width: 500px;
+  margin: 10px auto;
+}
+footer {
+  border-top: 1px solid rgb(231, 231, 231);
+  width: 960;
+  padding-top: 23px;
+  margin-bottom: 80px;
