--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,19 +1,20 @@
-header h1 {
-  font-family: Lato, sans-serif;
-  font-weight: 100;
-  color: #fff;
-  font-size: 279px;
-}
 header p {
   font-family: Lora, serif;
   font-style: italic;
   color: #b8b8b8;
   font-size: 12px;
 }
+article h1 {
+  font-family: Lato, sans-serif;
+  font-weight: 100;
+  color: #fff;
+  font-size: 279px;
+  letter-spacing: .09em;
+}
 section:nth-of-type(1) h1 {
   font-family: Oswald, sans-serif;
   color: #fdcd84;
-  font-size: 75px;
+  font-size: 55px;
 }
 section:nth-of-type(1) h2 {
   font-family: Merriweather, serif;
