--- a/css/fonts.css
+++ b/css/fonts.css
@@ -8,13 +8,13 @@ article h1 {
   font-family: Lato, sans-serif;
   font-weight: 100;
   color: #fff;
-  font-size: 220px;
+  font-size: 240px;
   letter-spacing: .09em;
 }
 section:nth-of-type(1) h1 {
   font-family: Oswald, sans-serif;
   color: #fdcd84;
-  font-size: 55px;
+  font-size: 75px;
 }
 section:nth-of-type(1) h2 {
   font-family: Merriweather, serif;
@@ -33,6 +33,8 @@ section:nth-of-type(2) h1 {
   font-style: italic;
   color: #5f5d66;
   font-size: 36px;
+  text-align: center;
+  padding-bottom: 20px;
 }
 section:nth-of-type(2) p {
   font-family: Lato, sans-serif;
@@ -62,7 +64,6 @@ section:nth-of-type(4) h1 {
 section:nth-of-type(4) ul {
   font-family: Oswald, sans-serif;
   color: #e0e0e0;
-  list-style-type: none;
 }
 section:nth-of-type(4) ul li ul:nth-of-type(1) li:nth-of-type(1), section:nth-of-type(4) ul li ul:nth-of-type(2) li:nth-of-type(1) {
   font-size: 79px;
