--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,13 +4,14 @@ header p {
   color: #b8b8b8;
   font-size: 12px;
 }
-article h1 {
+article > h1 {
   font-family: Lato, sans-serif;
   font-weight: 100;
   color: #fff;
   font-size: 240px;
   letter-spacing: .09em;
 }
+/*positioning relatives*/
 section:nth-of-type(1) h1 {
   font-family: Oswald, sans-serif;
   color: #fdcd84;
@@ -27,6 +28,7 @@ section:nth-of-type(1) p {
   color: #000;
   font-size: 25px;
 }
+/*box model*/
 section:nth-of-type(2) h1 {
   font-family: Lora, serif;
   font-weight: 700;
@@ -42,6 +44,7 @@ section:nth-of-type(2) p {
   color: #5f5d66;
   font-size: 19px;
 }
+/*staying afloat*/
 section:nth-of-type(3) h1 {
   font-family: Oswald, sans-serif;
   color: #247a5a;
@@ -52,11 +55,20 @@ section:nth-of-type(3) p {
   color: #464646;
   font-size: 14px;
 }
+/*bullets*/
+section:nth-of-type(4) h1 {
+  letter-spacing: .06em;
+  text-align: center;
+}
 section:nth-of-type(4) h1 .font-change {
   font-family: Lato, sans-serif;
   font-size: 12px;
+  font-weight: 700;
+  color: #e0c167;
+  position: relative; 
+  top: -2px; 
 }
-section:nth-of-type(4) h1 {
+section:nth-of-type(4) h1 .no-change {
   font-family: Oswald, sans-serif;
   color: #a97d35;
   font-size: 15px;
@@ -64,6 +76,7 @@ section:nth-of-type(4) h1 {
 section:nth-of-type(4) ul {
   font-family: Oswald, sans-serif;
   color: #e0e0e0;
+  text-align: center;
 }
 section:nth-of-type(4) ul li ul:nth-of-type(1) li:nth-of-type(1), section:nth-of-type(4) ul li ul:nth-of-type(2) li:nth-of-type(1) {
   font-size: 79px;
@@ -95,7 +108,7 @@ section:nth-of-type(4) ul li ul:nth-of-type(4) li:nth-of-type(3) {
 section:nth-of-type(4) ul li ul:nth-of-type(5) li:nth-of-type(3) {
   font-size: 32px;
 }
-
+/*famous blocks*/
 section:nth-of-type(5) h1 {
   font-family: Oswald, sans-serif;
   color: #fff;
