--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,21 @@
-body {
-  width: 1058px;
-  margin: 0 auto;
-}
-/*masthead*/
-header p { 
-  float: right;
-  padding-top: 115px;
-  padding-right: 120px;
-}
-/*main content*/
-article {
-  position: relative;
-}
-article > h1 {
-  margin-left: 20px;
-    z-index: -500;
-}
+
+
+/*** main content ***/
 div.header-background {
   background-color: #ccc9da;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 592px;
-  height: 1034px;
-  margin-left: -140px;
-  z-index: -1000;
 }
 div.border-box-background {
   background-color: #d8d5e4;
-  position: absolute;
-  top: 664px;
-  left: 0;
-  width: 592px;
-  height: 370px;
-  margin-left: -140px;
-  z-index: -1000;
 }
 /*positioning relatives*/
 section:nth-of-type(1) {
   float: right;
+  margin-bottom: 20px;
   width: 595px;
-  margin-bottom: 20px; 
 }
-section:nth-of-type(1) p,
 section:nth-of-type(1) h1,
-section:nth-of-type(1) h2 {
+section:nth-of-type(1) h2,
+section:nth-of-type(1) p {
   margin-right: 50px;
   margin-left: 25px;
 }
@@ -76,7 +47,7 @@ section:nth-of-type(1) h2 {
 section:nth-of-type(1) p {
   line-height: 1.6em;
 }
-section:nth-of-type(1) figure img:nth-of-type(1) {
+section:nth-of-type(1) img:nth-of-type(1) {
   -ms-transform: rotate(-4deg); /* IE 9 */
   -webkit-transform: rotate(-4deg); /* Chrome, Safari, Opera */
   transform: rotate(-4deg);
@@ -85,7 +56,7 @@ section:nth-of-type(1) figure img:nth-of-type(1) {
   top: 150px;
   z-index: -900;
 }
-section:nth-of-type(1) figure img:nth-of-type(2) {
+section:nth-of-type(1) img:nth-of-type(2) {
   position: absolute;
   left: 300px;
   top: 649px;
