--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,9 +1,11 @@
+/*** masthead ***/
 header p {
   font-family: Lora, serif;
   font-style: italic;
   color: #b8b8b8;
   font-size: 12px;
 }
+/*** main content ***/
 article > h1 {
   font-family: Lato, sans-serif;
   font-weight: 100;
@@ -11,11 +13,12 @@ article > h1 {
   font-size: 240px;
   letter-spacing: .09em;
 }
-/*positioning relatives*/
+/*** positioning relatives ***/
 section:nth-of-type(1) h1 {
-  font-family: Oswald, sans-serif;
   color: #fdcd84;
+  font-family: Oswald, sans-serif;
   font-size: 75px;
+  letter-spacing: -.01em;
 }
 section:nth-of-type(1) h2 {
   font-family: Merriweather, serif;
@@ -27,8 +30,9 @@ section:nth-of-type(1) p {
   font-weight: 300;
   color: #000;
   font-size: 25px;
+  line-height: 1.5em;
 }
-/*box model*/
+/*** box model ***/
 section:nth-of-type(2) h1 {
   font-family: Lora, serif;
   font-weight: 700;
@@ -43,8 +47,9 @@ section:nth-of-type(2) p {
   text-align: center;
   color: #5f5d66;
   font-size: 19px;
+  line-height: 1.7em;
 }
-/*staying afloat*/
+/*** staying afloat ***/
 section:nth-of-type(3) h1 {
   font-family: Oswald, sans-serif;
   color: #247a5a;
@@ -57,7 +62,7 @@ section:nth-of-type(3) p {
   font-size: 14px;
   text-align: right;
 }
-/*bullets*/
+/*** bullets ***/
 section:nth-of-type(4) h1 {
   letter-spacing: .06em;
   text-align: center;
@@ -110,7 +115,7 @@ section:nth-of-type(4) ul li ul:nth-of-type(4) li:nth-of-type(3) {
 section:nth-of-type(4) ul li ul:nth-of-type(5) li:nth-of-type(3) {
   font-size: 32px;
 }
-/*famous blocks*/
+/*** famous blocks ***/
 section:nth-of-type(5) h1 {
   font-family: Oswald, sans-serif;
   color: #fff;
@@ -131,7 +136,7 @@ section:nth-of-type(5) a:hover {
   color: #fff;
   text-decoration: underline;
 }
-/*border bottom*/
+/*** border bottom ***/
 section:nth-of-type(6) h1 {
   font-family: Oswald, sans-serif;
   color: #000;
@@ -148,7 +153,7 @@ section:nth-of-type(6) p {
   color: #000;
   font-size: 22px;
 }
-/*transformers*/
+/*** transformers ***/
 section:nth-of-type(7) h1 {
   font-family: Oswald, sans-serif;
   color: #fff;
@@ -199,7 +204,7 @@ section:nth-of-type(7) ul li:nth-of-type(4) {
   font-size: 39px;
   color: #fff;
 }
-/*overflow*/
+/*** overflow ***/
 section:nth-of-type(8) p {
   font-family: Lora, serif;
   font-style: italic;
@@ -207,6 +212,7 @@ section:nth-of-type(8) p {
   color: #627078;
   font-size: 16px;
 }
+/*** registration form ***/
 form h1 {
   font-family: Oswald, sans-serif;
   font-size: 28px;
@@ -215,6 +221,7 @@ form label {
   font-family: Lato, sans-serif;
   font-size: 22px;
 }
+/*** footer ***/
 footer {
   font-family: Lato, sans-serif;
   font-size: 17px;
@@ -223,7 +230,6 @@ footer {
 footer strong.color-change {
   color: #666; 
 }
-
 footer address {
   font-family: Merriweather, serif;
   font-style: normal;
