--- a/css/positioning.css
+++ b/css/positioning.css
@@ -34,3 +34,54 @@ div.border-box-background {
   z-index: -1000;
 }
 /*** positioning relatives ***/
+section:nth-of-type(1) {
+  float: right;
+  margin-bottom: 20px;
+  width: 595px;
+}
+section:nth-of-type(1) h1 {
+  margin: 0 50px 20px -25px; /*margin & padding to match background gradient*/
+  padding: 3px 3px 3px 45px;
+  display: inline-block;
+}
+section:nth-of-type(1) h2 {
+  margin: 25px 50px 0 25px;
+}
+section:nth-of-type(1) p {
+  margin: 0 50px 0 25px;
+}
+section:nth-of-type(1) img:nth-of-type(1) {
+  position: absolute;
+  top: 150px;
+  left: 375px;
+  z-index: -900;
+}
+section:nth-of-type(1) img:nth-of-type(2) {
+  position: absolute;
+  top: 649px;
+  left: 300px;
+  z-index: -800;
+}
+/*** box model ***/
+section:nth-of-type(2) {
+  float: left;
+  position: relative;
+  margin-top: -40px;
+  padding-left: 30px;
+  width: 423px;
+  height: 310px;
+  z-index: 0;
+}
+section:nth-of-type(2) p {
+  padding: 0px 25px; 
+}
+/*** box model ***/
+section:nth-of-type(2) figure {
+  margin: 0 0 10px -48px; /*positions image off-center*/
+}
+/*** staying afloat ***/
+section:nth-of-type(3) {
+  float: left;
+  width: 170px;
+  clear: both;
+}
