--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 /*** main content ***/
 div.header-background {
   background-color: #ccc9da;
@@ -7,24 +5,8 @@ div.header-background {
 div.border-box-background {
   background-color: #d8d5e4;
 }
-/*positioning relatives*/
-section:nth-of-type(1) {
-  float: right;
-  margin-bottom: 20px;
-  width: 595px;
-}
-section:nth-of-type(1) h1,
-section:nth-of-type(1) h2,
-section:nth-of-type(1) p {
-  margin-right: 50px;
-  margin-left: 25px;
-}
+/*** positioning relatives ***/
 section:nth-of-type(1) h1 {
-  letter-spacing: -.01em;
-  margin-bottom: 20px;
-  margin-left: -20px;
-  padding: 3px 3px 3px 45px;
-  display: inline-block;
   /*background gradient shield - from css-tricks.com*/
   /* Safari 4-5, Chrome 1-9 */
   background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .1)), color-stop(0.05, rgba(0, 0, 0, .1)), color-stop(0.5, rgba(0, 0, 0, .05)), color-stop(0.95, rgba(0, 0, 0, 0), to(rgba(0, 0, 0, 0))));
@@ -41,51 +23,14 @@ section:nth-of-type(1) h1 {
   /* Opera 11.10+ */
   background: -o-linear-gradient(left, rgba(0, 0, 0, .1), rgba(0, 0, 0, .1) 5%, rgba(0, 0, 0, .05), rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0));
 }
-section:nth-of-type(1) h2 {
-  margin-top: 25px;
-}
-section:nth-of-type(1) p {
-  line-height: 1.6em;
-}
 section:nth-of-type(1) img:nth-of-type(1) {
   -ms-transform: rotate(-4deg); /* IE 9 */
   -webkit-transform: rotate(-4deg); /* Chrome, Safari, Opera */
   transform: rotate(-4deg);
-  position: absolute;
-  left: 375px;
-  top: 150px;
-  z-index: -900;
 }
-section:nth-of-type(1) img:nth-of-type(2) {
-  position: absolute;
-  left: 300px;
-  top: 649px;
-  z-index: -800;
-}
-/*box model*/
-section:nth-of-type(2) {
-  width: 423px;
-  height: 310px;
-  float: left;
-  padding-left: 30px;
-  margin-top: -40px;
-  position: relative;
-  z-index: 0;
-}
-section:nth-of-type(2) p {
-  padding: 0px 25px 0px 25px; 
-  line-height: 1.7em;
-}
-section:nth-of-type(2) figure {
-  margin-left: -48px;
-  margin-bottom: 10px;
-}
-/*staying afloat*/
-section:nth-of-type(3) {
-  width: 170px;
-  float: left;
-  clear: both;
-}
+
+/*** staying afloat ***/
+
 section:nth-of-type(3) p {
   margin-top: 15px;
   margin-left: 35px;
