--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,18 +1,3 @@
-/*** masthead ***/
-header p {
-  font-family: Lora, serif;
-  font-style: italic;
-  color: #b8b8b8;
-  font-size: 12px;
-}
-/*** main content ***/
-article > h1 {
-  font-family: Lato, sans-serif;
-  font-weight: 100;
-  color: #fff;
-  font-size: 240px;
-  letter-spacing: .09em;
-}
 /*** positioning relatives ***/
 section:nth-of-type(1) h1 {
   color: #fdcd84;
@@ -61,6 +46,7 @@ section:nth-of-type(3) p {
   color: #464646;
   font-size: 14px;
   text-align: right;
+  line-height: 1.35em;
 }
 /*** bullets ***/
 section:nth-of-type(4) h1 {
