--- a/css/positioning.css
+++ b/css/positioning.css
@@ -85,3 +85,60 @@ section:nth-of-type(3) {
   width: 170px;
   clear: both;
 }
+section:nth-of-type(3) p {
+  margin: 15px 0 10px 35px;
+}
+section:nth-of-type(3) figure {
+  position: relative;
+  top: 20px;
+  left: 45px;
+  width: 145px;
+  z-index: 10;
+}
+/*** bullets ***/
+section:nth-of-type(4) {
+  float: right;
+  margin-right: 10px;
+  margin-bottom: 30px;
+  width: 82%;
+  clear: right;
+}
+section:nth-of-type(4) h1 {
+  padding: 10px;
+  margin-right: 40px;
+}
+section:nth-of-type(4) figure {
+  margin: 25px 25px 0 60px;
+  width: 717px;
+}
+section:nth-of-type(4) ul {
+  margin: 0 auto;
+  width: 860px; 
+}
+section:nth-of-type(4) ul ul {
+  float: left;
+  margin-top: -290px;
+  padding: 245px 0px 100px 0px;
+}
+section:nth-of-type(4) ul ul:nth-of-type(1) {
+  margin-left: 15px;
+  padding: 245px 0px 30px 0px;
+  width: 156px; 
+}
+section:nth-of-type(4) ul ul:nth-of-type(2) {
+  padding: 245px 0px 30px 0px;
+  width: 164px;
+}
+section:nth-of-type(4) ul ul:nth-of-type(3) {
+  padding: 275px 0px 30px 0px;
+  width: 156px;
+}
+section:nth-of-type(4) ul ul:nth-of-type(4) {
+  padding: 220px 0px 30px 0px;
+  width: 162px;
+}
+section:nth-of-type(4) ul ul:nth-of-type(5) {
+  margin-right: 0;
+  padding: 228px 0px 30px 0px;
+  width: 171px;
+}
