--- a/css/styles-bottom.css
+++ b/css/styles-bottom.css
@@ -1,6 +1,6 @@
 /*border bottom*/
 section:nth-of-type(6) img{
-margin-left: 50px;
+margin-left: 0px;
 margin-top: -150px;
 }
 
@@ -21,6 +21,8 @@ section:nth-of-type(6) h1{
 section:nth-of-type(6) {
   line-height: 1.7em;
   margin-left: 50px;
+  z-index: -110;
+  position: relative;
 }
 section:nth-of-type(6) h1 {
   display: inline-block;
@@ -35,7 +37,29 @@ section:nth-of-type(7) {
   background-color: rgb(60, 131, 187);
   width: 225px;
   height: 715px;
+  margin-left: 785px;
+  margin-top: -745px;
+  z-index: -100;
+  padding-left: 20px;
 }
+
+section:nth-of-type(7) div{
+	margin-top: -100px;
+}
+
+section:nth-of-type(7) h1{
+border-bottom: solid 10px rgb(95,149,193);
+display: inline-block;
+margin-bottom: 5px;
+padding-bottom: 10px;
+padding-top: 10px;
+}
+
+section:nth-of-type(7) img{
+margin-left: -32px;
+margin-top: -100px;
+}
+
 /*overflow*/
 section:nth-of-type(8) {
 margin-bottom: 300px;
