--- a/css/positioning.css
+++ b/css/positioning.css
@@ -114,39 +114,65 @@ section:nth-of-type(4) h1 .font-change {
   position: relative; 
   top: -2px;
 }
-section:nth-of-type(4) figure {
+/*section:nth-of-type(4) figure {
   margin: 25px 25px 0 60px;
   width: 717px;
-}
-section:nth-of-type(4) ul {
+}*/
+/*section:nth-of-type(4) ul {
   margin: 0 auto;
   width: 860px; 
-}
-section:nth-of-type(4) ul ul {
+}*/
+section:nth-of-type(4) figure {
   float: left;
-  margin-top: -290px;
-  padding: 245px 0px 100px 0px;
+  /*position: relative;*/
+  margin-top: 20px;
 }
-section:nth-of-type(4) ul ul:nth-of-type(1) {
-  margin-left: 15px;
-  padding: 245px 0px 30px 0px;
+section:nth-of-type(4) figcaption {
+  position: relative;
+  margin-top: -160px;
+  padding-bottom: 35px;
+  z-index: -10;
+}
+section:nth-of-type(4) img {
+  margin-left: 30px;
+  margin-bottom: 90px;
+}
+section:nth-of-type(4) figure:nth-of-type(1) figcaption {
+  padding-top: 25px;
+}
+section:nth-of-type(4) figure:nth-of-type(2) figcaption {
+  padding-top: 25px;
+}
+section:nth-of-type(4) figure:nth-of-type(3) figcaption {
+  padding-top: 55px;
+}
+section:nth-of-type(4) figure:nth-of-type(4) figcaption {
+  padding-top: 0px;
+}
+section:nth-of-type(4) figure:nth-of-type(5) figcaption {
+  padding-top: 7px;
+}
+
+section:nth-of-type(4) figure:nth-of-type(1) {
+  margin-left: 10px;
+  /*padding: 25px 0px 30px 0px;*/
   width: 156px; 
 }
-section:nth-of-type(4) ul ul:nth-of-type(2) {
-  padding: 245px 0px 30px 0px;
+section:nth-of-type(4) figure:nth-of-type(2) {
+  /*padding: 25px 0px 30px 0px;*/
   width: 164px;
 }
-section:nth-of-type(4) ul ul:nth-of-type(3) {
-  padding: 275px 0px 30px 0px;
+section:nth-of-type(4) figure:nth-of-type(3) {
+  /*padding: 25px 0px 30px 0px;*/
   width: 156px;
 }
-section:nth-of-type(4) ul ul:nth-of-type(4) {
-  padding: 220px 0px 30px 0px;
+section:nth-of-type(4) figure:nth-of-type(4) {
+  /*padding-bottom: 30px;*/
   width: 162px;
 }
-section:nth-of-type(4) ul ul:nth-of-type(5) {
+section:nth-of-type(4) figure:nth-of-type(5) {
   margin-right: 0;
-  padding: 228px 0px 30px 0px;
+  /*padding: 7px 0px 30px 0px;*/
   width: 171px;
 }
 /*** footer ***/
