--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ header p {
   font-size: 12px;
   color: #b8b8b8;
 }
-div.header-background {
+.header-background {
   background-color: #ccc9da;
 }
 /*** main content ***/
@@ -16,7 +16,7 @@ article > h1 {
   color: #fff;
   letter-spacing: .09em;
 }
-div.border-box-background {
+.border-box-background {
   background-color: #d8d5e4;
 }
 /*** positioning relatives ***/
@@ -114,28 +114,28 @@ section:nth-of-type(4) figcaption {
   text-align: center;
   list-style-type: none;
 }
-span.bullet-size.small-font {
+.bullet-size.small-font {
   font-size: 31px;
 }
-span.bullet-size.medium-font {
+.bullet-size.medium-font {
   font-size: 79px;
 }
-span.bullet-size.large-font {
+.bullet-size.large-font {
   font-size: 87px;
 }
-span.bullet-brand.small-font {
+.bullet-brand.small-font {
   font-size: 28px;
 }
-span.bullet-brand.medium-font {
+.bullet-brand.medium-font {
   font-size: 38px;
 }
-span.bullet-brand.large-font {
+.bullet-brand.large-font {
   font-size: 40px;
 }
-span.bullet-load.medium-font {
+.bullet-load.medium-font {
   font-size: 32px;
 }
-span.bullet-load.large-font {
+.bullet-load.large-font {
   font-size: 40px;
 }
 section:nth-of-type(4) figure {
@@ -148,13 +148,20 @@ section:nth-of-type(4) figure:nth-of-type(5) {
 section:nth-of-type(5) h1 {
   font-family: Oswald, sans-serif;
   font-size: 49px;
+  display: block;
   color: #fff;
+  background-color: rgb(82, 71, 67);
+  text-align: center;
+  line-height: 2.3em;
 }
 section:nth-of-type(5) figcaption {
   font-family: Merriweather, serif;
   font-size: 26px;
   font-weight: 300;
+  display: block;
   color: #fff;
+  background-color: rgb(113, 98, 91);
+  line-height: 1.3em;
 }
 section:nth-of-type(5) a {
   font-size: 18px;
@@ -165,61 +172,41 @@ section:nth-of-type(5) a:hover {
   color: #fff;
   text-decoration: underline;
 }
-section:nth-of-type(5) {
-  width: 960px;
-  margin: 0 auto;
-  clear: both;
-}
-section:nth-of-type(5) figure {
-  position: relative;
-}
 section:nth-of-type(5) a {
   display: inline-block;
-  padding-top: 30px;
 }
-section:nth-of-type(5) a img {
-  position: absolute;
-  top: 505px;
-  right: 0px;
-}
-section:nth-of-type(5) h1 {
-  background-color: rgb(82, 71, 67);
-  height: 117px;
-  display: block;
-  text-align: center;
-  line-height: 2.3em;
-}
-section:nth-of-type(5) figcaption {
-  background-color: rgb(113, 98, 91);
-  padding: 70px 25px 30px 25px;
-  line-height: 1.3em;
-  display: block;
-  margin-top: -33px;
-  z-index: -100;
-  position: relative;
-}
+
 /*** border bottom ***/
 section:nth-of-type(6) h1 {
   font-family: Oswald, sans-serif;
   font-size: 82px;
+  display: inline-block;
   color: #000;
+  border-bottom: 20px solid #000;
 }
-section:nth-of-type(6) p:nth-of-type(1) {
+section:nth-of-type(6) h2 {
   font-family: Oswald, sans-serif;
   font-size: 39px;
+  display: inline-block;
   color: #000;
+  border-bottom: 3px solid #000;
 }
 section:nth-of-type(6) p {
   font-family: Merriweather, serif;
   font-weight: 300;
   font-size: 22px;
   color: #000;
+  line-height: 1.5em;
 }
 /*** transformers ***/
+section:nth-of-type(7) {
+  background-color: rgb(60, 131, 187);
+}
 section:nth-of-type(7) h1 {
   font-family: Oswald, sans-serif;
   font-size: 31px;
   color: #fff;
+  border-bottom: solid 10px rgb(95,149,193);
 }
 section:nth-of-type(7) span.size-change {
   font-size: 21px;
@@ -233,27 +220,39 @@ section:nth-of-type(7) p:nth-of-type(1) {
   font-family: Lora, serif;
   font-style: italic;
   font-size: 16px;
+  display: inline-block;
   color: #fff;
+  line-height: 1.55em;
 }
 section:nth-of-type(7) p:nth-of-type(2) {
   font-size: 14px;
   color: #75a8d0;
+  line-height: .5;
+  letter-spacing: -.03em;
+  border-bottom: solid 4px rgb(56,117,164);
+  border-top: solid 4px rgb(56,117,164);
 }
 section:nth-of-type(7) p:nth-of-type(2) span.size-change {
   font-size: 32px;
+  letter-spacing: -.05em;
 }
-section:nth-of-type(7) p:nth-of-type(3) {
+.line-spanner {
   font-size: 54px;
+  color: #fff;
 }
 section:nth-of-type(7) ul {
   list-style-type: none;
 }
-section:nth-of-type(7) ul li {
+section:nth-of-type(7) li {
   font-family: Oswald, sans-serif;
   color: #75a8d0;
+  line-height: 1.5em;
 }
-section:nth-of-type(7) ul li:nth-of-type(1) {
+section:nth-of-type(7) li:first-of-type {
   font-size: 14px;
+  text-align: center;
+  border-left: 40px solid rgb(95,149,193);
+  border-right: 40px solid rgb(95,149,193);
 }
 section:nth-of-type(7) ul li:nth-of-type(2) {
   font-size: 27px;
@@ -266,10 +265,13 @@ section:nth-of-type(7) ul li:nth-of-type(4) {
   font-size: 39px;
   color: #fff;
 }
-section:nth-of-type(7) {
-  background-color: rgb(60, 131, 187);
-  width: 225px;
-  height: 715px;
+.dashed-border {
+  border-top: dashed 3px rgb(21,79,125) ;
+  border-bottom: dashed 3px rgb(21,79,125);
+}
+.circle {
+  border-radius: 14px;
+  background-color: #fff;  
 }
 /*** overflow ***/
 section:nth-of-type(8) p {
@@ -277,10 +279,24 @@ section:nth-of-type(8) p {
   font-style: italic;
   font-size: 16px;
   color: #627078;
-  text-align: justify;  
+  text-align: justify; 
+  line-height: 1.8em; 
 }
-section:nth-of-type(8) {
- 
+section:nth-of-type(8) p:nth-of-type(1) { 
+  text-align: right;
+  -ms-transform: rotate(1.2deg); /* IE 9 */
+  -webkit-transform: rotate(1.2deg); /* Chrome, Safari, Opera */
+  transform: rotate(1.2deg);
+}
+section:nth-of-type(8) p:nth-of-type(2) {
+  -ms-transform: rotate(-1deg); /* IE 9 */
+  -webkit-transform: rotate(-1deg); /* Chrome, Safari, Opera */
+  transform: rotate(-1deg);
+}
+section:nth-of-type(8) p:nth-of-type(3) {
+  -ms-transform: rotate(.8deg); /* IE 9 */
+  -webkit-transform: rotate(.8deg); /* Chrome, Safari, Opera */
+  transform: rotate(.8deg);
 }
 /*** registration form ***/
 form h1 {
@@ -291,7 +307,6 @@ form label {
   font-family: Lato, sans-serif;
   font-size: 22px;
 }
-
 form {
   border: 1px solid rgb(231, 231, 231);
   padding: 20px;
